--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,13 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.1.2</version>
+			</plugin>
+
 		</plugins>
 	</build>
 </project>
