--- a/src/.github/workflows/maven-test.yml
+++ b/src/.github/workflows/maven-test.yml
@@ -1,15 +1,14 @@
-name: Maven Test CI
+name: Maven Test Pipeline
 
 on:
   push:
-    branches: [ feature/to_jpg ]
+    branches: [ main ]
   pull_request:
-    branches: [ feature/to_jpg ]
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -21,4 +20,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Run tests with Maven
-        run: mvn test
+        run: |
+          mvn clean test
+          # Si quieres ver los resultados de pruebas
+          mvn test --quietF
