--- a/.github/workflows/new_test.yml
+++ b/.github/workflows/new_test.yml
@@ -1,8 +1,14 @@
+name: Maven Test Pipeline
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -14,4 +20,4 @@ jobs:
           distribution: 'temurin'
 
       - name: Run tests with Maven
-        run: mvn test
+        run: mvn clean test
