--- a/pom.xml
+++ b/pom.xml
@@ -40,13 +40,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-		<!-- Apache Tika para detección de MIME type -->
+		<!-- Apache Tika for MIME type detection -->
 		<dependency>
 			<groupId>org.apache.tika</groupId>
 			<artifactId>tika-core</artifactId>
 			<version>3.1.0</version>
 		</dependency>
-		<!-- JAI ImageIO para conversión de JPEG 2000 a JPEG -->
+		<!-- JAI ImageIO para conversion de JPEG 2000 a JPEG -->
 		<dependency>
 			<groupId>com.github.jai-imageio</groupId>
 			<artifactId>jai-imageio-jpeg2000</artifactId>
